--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -6,3 +6,8 @@ jobs:
     steps:
     - uses: actions/checkout@v3
     - run: npm install -g pnpm
+  testing-code:
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v3
+    - run: pnmp test
