--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -6,5 +6,5 @@ jobs:
     steps:
     - uses: actions/checkout@v3
     - run: npm install -g pnpm
-    - run: pnpm install
+    - run: pnpm install --no-frozen-lockfile
     - run: pnpm test
