--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -8,3 +8,12 @@ jobs:
     - run: npm install -g pnpm
     - run: pnpm install --no-frozen-lockfile
     - run: pnpm test
+
+jobs:
+  lint-code:
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v3
+    - run: npm install -g pnpm
+    - run: pnpm install --no-frozen-lockfile
+    - run: pnpm lint
