--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -8,11 +8,14 @@ jobs:
     - run: npm install -g pnpm
     - run: pnpm install --no-frozen-lockfile
     - run: pnpm test
+    - name: Archive node_modules
+      uses: actions/upload-artifacts@v3
+      with:
+        name: archive-node-modules
+        path: |
+        **/node_modules
+        **/.cache
 
   lint-code:
-    runs-on: ubuntu-latest
-    steps:
-    - uses: actions/checkout@v3
-    - run: npm install -g pnpm
-    - run: pnpm install --no-frozen-lockfile
+    needs: install-packages
     - run: pnpm lint
