--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -13,9 +13,14 @@ jobs:
       with:
         name: archive-node-modules
         path: |
-        **/node_modules
-        **/.cache
+          **/node_modules
+          **/.cache
 
   lint-code:
     needs: install-packages
+    - name: Download archive-node-modules
+      uses: actions/download-artifact@v3
+      with:
+        name: archive-node-modules
+
     - run: pnpm lint
