--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -13,6 +13,7 @@ jobs:
     needs: install-packages
     runs-on: ubuntu-latest
     steps:
+    - uses: actions/checkout@v3
     - run: npm install -g pnpm
     - run: pnpm install --no-frozen-lockfile
     - run: pnpm lint
